--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.6</version>
 		</dependency>
-
+		<!--lombok工具包-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
